# ECG2DIG

./: .gitignore  README.md  environment.yml  inference.ipynb  pyproject.toml  val_digoxin_dummy.tsv
models/: ECG2DIG.py
src/ecg2dig/: ECG2DIG.py  calibration.py  inference.py  metrics.py
src/ecg2dig/utils/: datasets.py  defines.py  helpers.py  transforms.py
